BusOne/src/objects/EM_Event_Configuration_vod__c.object
<CustomObject>
    <description>Used for defining a set of event configurations by event type, time period, and location. Used by Veeva Event Management.</description>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End date for event configuration settings</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Record_Type_Translated__c</fullName>
        <formula>IF ( Event_Type_vod__c = &quot;Speaker_Program_vod&quot;, &quot;Speaker Program&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Record Type (Translated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type_vod__c</fullName>
        <description>Event Type. Populate with an untranslated record type name from the EM_Event_vod object</description>
        <label>Event Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start date for event configuration settings</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Event Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EC-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Configurations</pluralLabel>
    <recordTypes>
        <fullName>Event_Configuration_vod</fullName>
        <active>true</active>
        <description>Event Configuration</description>
        <label>Event_Configuration_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>StartDateBeforeEndDate</fullName>
        <active>true</active>
        <description>Start Date should not be after End Date.</description>
        <errorConditionFormula>Start_Date_vod__c &gt; End_Date_vod__c</errorConditionFormula>
        <errorDisplayField>Start_Date_vod__c</errorDisplayField>
        <errorMessage>End date must be equal or greater than start date.</errorMessage>
    </validationRules>
</CustomObject>